OO-6986: custom taxonomy for media or fallback to resource taxonomy